--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,37 +1,80 @@
 @import './common';
 @import './example';
 
-.header{
-    padding-top: 20px;
-    height: 60px;
-    background-color: #2494a5;
+.header {
+  padding-top: 10px;
+  height: 60px;
+  background-color: #2494a5;
+  position: sticky;
+  top: 0;
+  align-items: center;
+  justify-content: center;
 }
 
-// .search-form{
-//     // display:;
-// justify-content:space-around;
-// }
-
-img{
-    width: 300px;
-    height: 200px;
-    object-fit: cover;
+.search-form {
+  text-align: center;
 }
 
-.gallery{
-    display: flex;
-    flex-wrap: wrap;
+.input {
+  width: 250px;
+  height: 40px;
+  border: 2px solid #cccccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #ffffff;
+  background-image: '../images/—Pngtree—vector search icon_4184112.png';
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 20px;
 }
 
-.load-more{
-    display: block;
-    background-color: #4a6dce;
-    border: 2px solid #fff;
-    color: #fff;
-    width: 130px;
-    height: 30px;
+.submit {
+  border: 2px solid #cccccc;
+  border-radius: 4px;
+  font-size: 16px;
+  height: 30px;
 }
 
-.load-more-hidden{
-    display: none;
+img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+}
+a {
+  text-decoration: none;
+}
+
+.photo-card {
+  margin: 5px;
+  border: 1px solid #cccccc;
+  float: left;
+}
+
+.info {
+  padding-left: 10px;
+  text-align: left;
+  color: rgb(108, 106, 106);
+  font-size: 12px;
+}
+
+.load-more {
+  display: block;
+  background-color: #4a6dce;
+  border: 2px solid #ffffff;
+  border-radius: 5px;
+  color: #ffffff;
+  width: 130px;
+  height: 30px;
+  cursor: pointer;
+  text-transform: uppercase;
+  margin: auto;
+  display: block;
+}
+
+.load-more-hidden {
+  display: none;
 }
